# klyppd

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.js
.github/workflows/: build.yml  release.yml
electron/: db.ts  editor.ts  hotkeys.ts  main.ts  preload.ts  r2.ts  recorder.ts  settings.ts
packaging/: klyppd.desktop
packaging/aur/: README.md
packaging/aur/klyppd/: PKGBUILD
packaging/aur/klyppd-bin/: .SRCINFO  PKGBUILD
packaging/aur/klyppd-git/: .SRCINFO  PKGBUILD
public/: default-theme.css
src/: App.svelte  app.html  electron.d.ts
src-tauri/: Cargo.toml  gtk.css  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  editor.rs  lib.rs  main.rs  r2.rs  recorder.rs  settings.rs
src/lib/stores/: theme.ts
src/routes/: +page.svelte
static/: default-theme.css
