[package]
name = "klyppd"
version = "0.1.0"
description = "Medal-style clip manager for Linux/Wayland — gpu-screen-recorder + Cloudflare R2."
authors = ["brook"]
edition = "2021"
license = "MIT"

[lib]
name = "klyppd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "6"
libc = "0.2"
evdev = "0.12"
urlencoding = "2"
base64 = "0.22"

# Faster dev builds: skip most debug info, optimize dependencies even in dev
[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 1

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

# Smaller release binary, slightly slower compile
[profile.release]
codegen-units = 16
strip = true
